--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="speakers.html">Speakers</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li class="cta"><a href="#">FLAGHUNT</a></li>
               </ul>
             </nav>
           </div>
@@ -59,10 +57,10 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
-            <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">CTF Community Bangladesh</span>
-            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web Design Conference 2019</h1>
-            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">September 6th-7th, Minnesota, United States</span>
-            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Buy Tickets</span></a>
+            <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100"></span>
+            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">CTF Community Bangladesh</h1>
+            <!-- <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">September 6th-7th, Minnesota, United States</span>
+            <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Buy Tickets</span></a> -->
           </div>
         </div>
       </div>
@@ -167,7 +165,7 @@
 
 
     
-    <div class="site-section">
+    <!-- <div class="site-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-lg-4" data-aos="fade-up">
@@ -242,7 +240,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="site-section">
       <div class="container">
